syntax = "proto3";

package dankfolio.v1;

option go_package = "github.com/nicolas-martin/dankfolio/backend/gen/proto/go/dankfolio/v1;dankfoliov1";

// AuthService provides authentication token management
service AuthService {
  // GenerateToken creates a new bearer token for a device,
  // requiring App Check verification.
  rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse);
}

// GenerateTokenRequest represents a request to generate a new token
message GenerateTokenRequest {
  // Firebase App Check token for verifying app integrity
  string app_check_token = 1;
  // Platform identifier (e.g., "ios", "android")
  string platform = 2;
}

// GenerateTokenResponse contains the generated token and its metadata
message GenerateTokenResponse {
  // The bearer token to use for authentication (now an application JWT)
  string token = 1;
  // Token expiration time in seconds from now
  int32 expires_in = 2;
}
