syntax = "proto3";

package dankfolio.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nicolas-martin/dankfolio/backend/gen/proto/go/dankfolio/v1;dankfoliov1";

// PriceService provides methods for retrieving price data
service PriceService {
  // GetPriceHistory returns historical price data for a given address
  rpc GetPriceHistory(GetPriceHistoryRequest) returns (GetPriceHistoryResponse) {}

  // GetTokenPrices returns current prices for multiple tokens
  rpc GetTokenPrices(GetTokenPricesRequest) returns (GetTokenPricesResponse) {}
}

// GetPriceHistoryRequest represents a request for price history data
message GetPriceHistoryRequest {
  string address = 1;
  enum PriceHistoryType {
    PRICE_HISTORY_TYPE_UNSPECIFIED = 0;
    ONE_MINUTE = 1;
    THREE_MINUTE = 2;
    FIVE_MINUTE = 3;
    FIFTEEN_MINUTE = 4;
    THIRTY_MINUTE = 5;
    ONE_HOUR = 6;
    TWO_HOUR = 7;
    FOUR_HOUR = 8;
    SIX_HOUR = 9;
    EIGHT_HOUR = 10;
    TWELVE_HOUR = 11;
    ONE_DAY = 12;
    THREE_DAY = 13;
    ONE_WEEK = 14;
  }
  PriceHistoryType type = 2;
  google.protobuf.Timestamp time_from = 3;
  google.protobuf.Timestamp time_to = 4;
  string address_type = 5;
}

// GetPriceHistoryResponse represents the response containing price history data
message GetPriceHistoryResponse {
  PriceHistoryData data = 1;
  bool success = 2;
}

// PriceHistoryData contains a list of price history items
message PriceHistoryData {
  repeated PriceHistoryItem items = 1;
}

// PriceHistoryItem represents a single price point with timestamp and value
message PriceHistoryItem {
  int64 unix_time = 1;  // Changed from google.protobuf.Timestamp to int64 to represent Unix timestamp directly
  double value = 2;
}

// GetTokenPricesRequest is the request for getting token prices
message GetTokenPricesRequest {
  repeated string token_ids = 1;
}

// GetTokenPricesResponse is the response containing token prices
message GetTokenPricesResponse {
  map<string, double> prices = 1;
}
